--- a/capstone/pubspec.yaml
+++ b/capstone/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   permission_handler: ^11.0.1
   file_picker: ^6.0.0
+  flutter_local_notifications: ^16.1.0
+  flutter_timezone: ^1.0.8
+  device_info_plus: ^9.1.0
+  http: ^1.1.0
+  image: ^4.1.3
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +66,7 @@ flutter:
   # the material Icons class.
   assets:
     - Assets/images/
+    - icons/
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
