--- a/capstone/android/app/src/main/AndroidManifest.xml
+++ b/capstone/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
    <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
    <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+   <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"
+        android:maxSdkVersion="32" />
     <application
         android:label="capstone"
         android:name="${applicationName}"
